First commited as before_57946_rev4